--- a/package.json
+++ b/package.json
@@ -47,10 +47,14 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "@types/styled-components-react-native": "^5.2.5",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.57.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.3.0",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^4.9.5"
   },
   "private": true
 }
