--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-native-webview": "13.12.5",
     "styled-components": "^6.1.16",
     "expo-sqlite": "~15.1.3"
+    "expo-sqlite": "~15.1.3",
+    "expo-file-system": "~18.0.12",
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
