--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "styled-components": "^6.1.16",
-    "expo-sqlite": "~15.1.3"
     "expo-sqlite": "~15.1.3",
     "expo-file-system": "~18.0.12",
+    "expo-updates": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
