--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo-google-fonts/lexend": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^2.30.0",
@@ -46,6 +47,7 @@
     "react-native-material-icons": "^1.0.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
