--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "frontend",
+    "name": "Krizzle",
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -12,10 +12,6 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
       "package": "com.venii24.frontend"
     },
     "web": {
@@ -28,7 +24,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/kriz.png",
+          "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
