--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@10play/tentap-editor": "^0.6.3",
     "@expo-google-fonts/lexend": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
