--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-material-icons": "^1.0.3",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-picker-select": "^9.3.1",
