--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "components/emptyHome"
+    "components/emptyHome",
+    "components/ui/FolderPage"
   ]
 }
