--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "styled-components": "^6.1.16",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
