feat(app.json): add info for release

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Krizzle",
-    "slug": "frontend",
+    "name": "krizzle",
+    "slug": "krizzleNoteAndCollection",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -12,7 +12,8 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.venii24.frontend"
+      "package": "com.krizzle",
+      "versionCode": 1
     },
     "web": {
       "bundler": "metro",
