--- a/app.json
+++ b/app.json
@@ -25,9 +25,8 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/krizzle.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
+          "image": "./assets/images/kriz.png",
+          "resizeMode": "cover",
           "backgroundColor": "#ffffff"
         }
       ],
