test(service): centralize setup
Centralize setup for service method tests: Move the repo mocks to a centralized file. Add a testMatch config to the package.json so the setup file is not run.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "expo lint"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "testMatch": [
+      "**/*.test.ts"
+    ]
   },
   "dependencies": {
     "@10play/tentap-editor": "^0.6.3",
